--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    @font-face {
+        font-family:'Kanit', sans-serif;
+        src: url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,100&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet");
+    }
 }
 
 section{
