--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ section .main {
 /*books*/
 .books{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     padding: 70px 0; 
     /* width: 100%;
     height: auto;
@@ -201,7 +201,7 @@ section .main {
 
 .books .featured_box{
     width: 100%;
-    height: 60vh;
+    height: auto;
     box-shadow: 0 0 8px #08a970;
     display: flex; 
     /* margin: 0 auto;
@@ -233,21 +233,12 @@ section .main {
     width: 200px;
     margin-right: 40px;
     text-align: center;
-    text-decoration:#000 ;
-    
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 80px;
     
 }
 
-/* #details{ */
-    /* display: flex; */
-    
-    /* width: 800px;
-    height: 40px;
-    size: 50%;
-    margin-left: 150px;
-    margin-top: 50px;
-    float: left; */
-/* }  */
 
 .add_books h1{
     display: flex;
@@ -260,9 +251,10 @@ section .main {
     width: 100%;
     height: auto;
     padding: 20px;
+    display: flex; 
     /* display: vertical; */
     /* align-items: center; */
-    justify-content: content;
+    justify-content: center;
     box-shadow: 0 0 8px #08a970;
 }
 input{
@@ -270,13 +262,103 @@ input{
     width:auto;
     display: list-item;
     margin-top: 10px;
+    /* align-items: center; */
+    justify-content: center;
     
 }
 #add-book {
     background-color: #08a970;
     margin-top: 40px;
 }
+/* authors */
+.authors{
+    width: 100%;
+    /* height: 100vh; */
+    padding: 70px 0; 
+   
+}
+.authors_box{
+    /* width: 100%;
+    height: 60vh;
+    box-shadow: 0 0 8px #08a970;*/
+    display: flex; 
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    /* display: vertical; */
+    /* align-items: center; */
+    box-shadow: 0 0 8px #08a970;
+    margin-bottom: 100px;
+    /* width: 100%;
+    height: 60vh;
+    box-shadow: 0 0 8px #08a970;
+    display: flex;  */
+}
+.authors h1{
+    display: flex; 
+    
+    justify-content: center; 
+    margin-bottom: 30px;
+    font-size: 45px; 
+    
+}
+.feat_auth{
+    width: 800px;
+    height: 40px;
+    text-align: center;
+    padding: 5px;
+    /* border: 1px solid #919191; */
+    /* margin-top: 10px; */
+    /* width: 800px; */
+    /* height: 40px; */
+    /* size: 80%; */
+    margin-left: 150px;
+    margin-top: 150px;
+    float: left; 
+}
 
+#author_list{
+    margin-top: 20px;
+    width: 200px;
+    margin-right: 40px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    
+    
+}
+/* add author */
+.add_author h1{
+    /* margin-top: 30px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    font-size: 45px; 
+}
+.add_auth{
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    display: flex; 
+    /* display: vertical; */
+    /* align-items: center; */
+    justify-content: center;
+    box-shadow: 0 0 8px #08a970;
+}
+input{
+    border-radius:3px;
+    width:auto;
+    display: list-item;
+    margin-top: 10px;
+    /* align-items: center; */
+    justify-content: center;
+    
+}
+#add-author {
+    background-color: #08a970;
+    margin-top: 40px;
+}
 
 
 /* reviews */
