--- a/style.css
+++ b/style.css
@@ -200,8 +200,9 @@ section .main {
 }
 
 .books .featured_box{
+     background-image: url(Images/back_feat.jpeg); 
     width: 100%;
-    height: auto;
+    height: 50vh;
     box-shadow: 0 0 8px #08a970;
     display: flex; 
     /* margin: 0 auto;
@@ -223,6 +224,10 @@ section .main {
     margin-left: 150px;
     margin-top: 20px;
     float: left; 
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+
 }
 #image{
     width: 100px;
@@ -248,6 +253,7 @@ section .main {
     font-size: 45px; 
 }
 .add_box{
+    background-image: url(Images/back_add.jpeg); 
     width: 100%;
     height: auto;
     padding: 20px;
@@ -281,6 +287,7 @@ input{
     /* width: 100%;
     height: 60vh;
     box-shadow: 0 0 8px #08a970;*/
+    background-image: url(Images/back_auth.png); 
     display: flex; 
     width: 100%;
     height: auto;
@@ -337,6 +344,7 @@ input{
     font-size: 45px; 
 }
 .add_auth{
+    background-image: url(Images/back_auth.png); 
     width: 100%;
     height: auto;
     padding: 20px;
