--- a/style.css
+++ b/style.css
@@ -180,14 +180,7 @@ section .main {
 /*books*/
 .books{
     width: 100%;
-    /* height: 100vh; */
     padding: 70px 0; 
-    /* width: 100%;
-    height: auto;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around; */
 }
 
 .books h1{
@@ -205,22 +198,12 @@ section .main {
     height: 50vh;
     box-shadow: 0 0 8px #08a970;
     display: flex; 
-    /* margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    overflow: hidden;
-    overflow-x: scroll; */
 }
 .featured_card{
     width: 800px;
     height: 40px;
     text-align: center;
     padding: 5px;
-    /* border: 1px solid #919191; */
-    /* margin-top: 10px; */
-    /* width: 800px; */
-    /* height: 40px; */
-    /* size: 80%; */
     margin-left: 150px;
     margin-top: 20px;
     float: left; 
@@ -258,8 +241,6 @@ section .main {
     height: auto;
     padding: 20px;
     display: flex; 
-    /* display: vertical; */
-    /* align-items: center; */
     justify-content: center;
     box-shadow: 0 0 8px #08a970;
 }
@@ -268,7 +249,6 @@ input{
     width:auto;
     display: list-item;
     margin-top: 10px;
-    /* align-items: center; */
     justify-content: center;
     
 }
@@ -279,27 +259,17 @@ input{
 /* authors */
 .authors{
     width: 100%;
-    /* height: 100vh; */
     padding: 70px 0; 
    
 }
 .authors_box{
-    /* width: 100%;
-    height: 60vh;
-    box-shadow: 0 0 8px #08a970;*/
     background-image: url(Images/back_auth.png); 
     display: flex; 
     width: 100%;
     height: auto;
     padding: 20px;
-    /* display: vertical; */
-    /* align-items: center; */
     box-shadow: 0 0 8px #08a970;
     margin-bottom: 100px;
-    /* width: 100%;
-    height: 60vh;
-    box-shadow: 0 0 8px #08a970;
-    display: flex;  */
 }
 .authors h1{
     display: flex; 
@@ -314,14 +284,10 @@ input{
     height: 40px;
     text-align: center;
     padding: 5px;
-    /* border: 1px solid #919191; */
-    /* margin-top: 10px; */
-    /* width: 800px; */
-    /* height: 40px; */
-    /* size: 80%; */
     margin-left: 150px;
-    margin-top: 150px;
+    margin-top: 20px;
     float: left; 
+
 }
 
 #author_list{
@@ -331,12 +297,11 @@ input{
     text-align: center;
     font-size: 20px;
     font-weight: 600;
-    
+    margin-bottom: 80px;
     
 }
 /* add author */
 .add_author h1{
-    /* margin-top: 30px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -349,8 +314,6 @@ input{
     height: auto;
     padding: 20px;
     display: flex; 
-    /* display: vertical; */
-    /* align-items: center; */
     justify-content: center;
     box-shadow: 0 0 8px #08a970;
 }
@@ -359,7 +322,6 @@ input{
     width:auto;
     display: list-item;
     margin-top: 10px;
-    /* align-items: center; */
     justify-content: center;
     
 }
